add radio group

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="click1"
         android:text="Button"
         tools:layout_editor_absoluteX="288dp"
         tools:layout_editor_absoluteY="136dp" />
